# robocup_inu_vision

./: README.md
src/launch_pkg/launch/: demo.launch copy.py  demo.launch.py
src/msgs_pkg/msg/: ObjectPose.msg
src/msgs_pkg/srv/: GetObjectPose.srv
src/pick_and_place_pkg/pick_and_place_pkg/: multi_load_node.py  multi_unload_node.py
src/pick_and_place_pkg/pick_and_place_pkg/backup/: multi_load_node.py  multi_unload_node.py
src/serial_pkg/serial_pkg/: manual_coordinator.py
src/vision/: package.xml  setup.py
src/vision/config/: Aluminum4040.stl  models.yaml  yolo_params.yaml
src/vision/vision/: yolo_3d_node copy.py  yolo_3d_node.py  yolo_3d_node_4_p2p_ICP.py  yolo_3d_node_f1_color.py  yolo_3d_node_f1_fix.py  yolo_3d_node_fl_yaml.py  yolo_3d_node_v3.py  yolo_3d_node_v4_info.py
src/vision/vision/save/: f1_test.py  test.py  yolo_3d_node copy.py  yolo_3d_node_1.py  yolo_3d_node_2_RP_add.py  yolo_3d_node_3_ICP.py  yolo_3d_node_4_p2p_ICP.py  yolo_3d_node_5_Circular Median Filter.py  yolo_3d_node_6_Symmetry.py  yolo_3d_node_7_view_fix.py
src/vision/vision/visual/: yolo_3d_node_v1.py  yolo_3d_node_v2_3dview_del.py
